--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Website Video Autoplay Fullscreen</title>
+  <title>Prankss</title>
   <style>
     body {
       margin: 0; /* Menghilangkan margin default browser */
