--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Prankss</title>
-  <style>
-    body {
-      margin: 0; /* Menghilangkan margin default browser */
-      overflow: hidden; /* Menyembunyikan scrollbar */
-    }
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<title>Video Autoplay Fullscreen</title>
+<style type="text/css">
+  body {
+    margin: 0;
+    overflow: hidden; 
+  }
 
-    video {
-      position: fixed; /* Memposisikan video agar tetap di tempatnya */
-      top: 0;
-      left: 0;
-      width: 100%; 
-      height: 100%;
-      object-fit: cover; /* Menyesuaikan video dengan layar, mungkin ada bagian yang terpotong */
-    }
-  </style>
+  video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  video::-webkit-media-controls-enclosure {
+    display:none !important;
+  }
+</style>
 </head>
 <body>
 
-  <video autoplay muted controls>
-    <source src="lv_0_20241007125645.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+<div class="scare">
+  <video id="video" class="video" src="lv_0_20241007125645.mp4" loop="" autoplay playsinline> </video>
+</div>
+
+<script type="text/javascript">
+  const video = document.getElementById("video");
+
+  function videoClick(event) {
+    if(event) event.preventDefault();
+    // if not fullscreen
+    const { documentElement } = document;
+    if(documentElement.requestFullscreen) documentElement.requestFullscreen();
+    else if(documentElement.mozRequestFullScreen) documentElement.mozRequestFullScreen();
+    else if(documentElement.webkitRequestFullscreen) documentElement.webkitRequestFullscreen();
+    else if(documentElement.msRequestFullscreen) documentElement.msRequestFullscreen();
+  }
+
+  video.addEventListener("click", videoClick);
+</script>
 
 </body>
 </html>
