--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>Video Autoplay Fullscreen</title>
-<style type="text/css">
-  body {
-    margin: 0;
-    overflow: hidden; 
-  }
+  <title>Video Autoplay Fullscreen</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
 
-  video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  video::-webkit-media-controls-enclosure {
-    display:none !important;
-  }
-</style>
+    video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
 
-<div class="scare">
-  <video id="video" class="video" src="lv_0_20241007125645.mp4" loop="" autoplay playsinline> </video>
-</div>
+  <video id="myVideo" src="lv_0_20241007125645.mp4" controls></video>
 
-<script type="text/javascript">
-  const video = document.getElementById("video");
+  <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+      var video = document.getElementById("myVideo");
+      video.play();
 
-  function videoClick(event) {
-    if(event) event.preventDefault();
-    // if not fullscreen
-    const { documentElement } = document;
-    if(documentElement.requestFullscreen) documentElement.requestFullscreen();
-    else if(documentElement.mozRequestFullScreen) documentElement.mozRequestFullScreen();
-    else if(documentElement.webkitRequestFullscreen) documentElement.webkitRequestFullscreen();
-    else if(documentElement.msRequestFullscreen) documentElement.msRequestFullscreen();
-  }
-
-  video.addEventListener("click", videoClick);
-</script>
+      if (video.requestFullscreen) {
+        video.requestFullscreen();
+      } else if (video.mozRequestFullScreen) { /* Firefox */
+        video.mozRequestFullScreen();
+      } else if (video.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
+        video.webkitRequestFullscreen();
+      } else if (video.msRequestFullscreen) { /* IE/Edge */
+        video.msRequestFullscreen();
+      }
+    });
+  </script>
 
 </body>
 </html>
